[gd_scene load_steps=2 format=3 uid="uid://ejlfi1ow2ugj"]

[ext_resource type="Script" path="res://ui/end_screen.gd" id="1_ica2r"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ica2r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -92.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="TheEndLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "THE END"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Score: "

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RestartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="ExitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
